	filterfalse and Michael Maddern (a.k.a. madders).

	Added dircolors -> vifm conversion script.  Thanks to Ink (a.k.a. inknoir),
	Hendrik Jaeger (a.k.a. henk) and Michael Maddern (a.k.a. madders).

	Added F key to less-like (file view) mode, which acts similar to `tail -F`
	or F key in less.  Thanks to Daniel Dettlaff (a.k.a. dmilith).

	Allowed having multiple file viewers with same rules for choosing them at
	run-time as for file associations.  Thanks to filterfalse.

	Made calculation of directory size visible in :jobs menu.

	Made tests less dependent on environment.  Thanks to Hendrik Jaeger (a.k.a.
	henk).

	Removed unnecessary command existence checks from vifm.vim.  Thanks to
	filterfalse.

	Auto-resize position field on the status bar to fit the text.  Thanks to
	ranousse.

	Switch to utf-8 internal representation of paths on Windows.  This fixes
	issues when file name encoding doesn't match system encoding.  Thanks to
	Stas Panteleev.

	Made leaving wrong (unexpectedly removed) directory more robust.  Thanks
	to willemw12.

	Fixed search messages in menus (nth time...).

	Fixed automatic finishing in some situation when no terminal is available.
	Thanks to tYGjQCsvVI.

	Fixed crash on navigation to end of line in command-line mode.  Thanks to
	Christian Fillion (a.k.a. cfillion).

	Fixed quite rare UI glitch right after updating 'classify'.

	Fixed UI glitch related to considering 'classify' option for ".." entry in
	directories without files.

	Fixed 'lsview' layout calculation for non-ascii names, which used too much
	space.

	Fixed 'lsview' entry highlight minor glitch related to symbolic links to
	directories.

	Fixed `:help` (no arguments) when 'vimhelp' is on and automatically
	installed Vim documentation is used.  Thanks to ranousse.

	Fixed occasional file skipping on moving files from trash directory.

	Fixed gf normal mode key on following symbolic links that target files by
	path that has symbolic links to directories.  Thanks to filterfalse.
