@@ -1,6 +1,6 @@
 " vifm syntax file
 " Maintainer:  xaizek <xaizek@openmailbox.org>
-" Last Change: January 06, 2014
+" Last Change: January 15, 2015
 " Based On:    Vim syntax file by Dr. Charles E. Campbell, Jr.
 
 if exists('b:current_syntax')
@@ -109,12 +109,12 @@ syntax case match
 syntax keyword vifmOption contained aproposprg autochpos cdpath cd chaselinks
 		\ classify columns co confirm cf cpoptions cpo dotdirs fastrun fillchars fcs
 		\ findprg followlinks fusehome gdefault grepprg history hi hlsearch hls iec
-		\ ignorecase ic incsearch is laststatus lines locateprg ls lsview number nu
-		\ numberwidth nuw relativenumber rnu rulerformat ruf runexec scrollbind scb
-		\ scrolloff so sort sortorder shell sh shortmess shm slowfs smartcase scs
-		\ sortnumbers statusline stl syscalls tabstop timefmt timeoutlen trash
-		\ trashdir ts tuioptions to undolevels ul vicmd viewcolumns vifminfo vimhelp
-		\ vixcmd wildmenu wmnu wrap wrapscan ws
+		\ ignorecase ic incsearch is laststatus lines locateprg ls lsview
+		\ mintimeoutlen number nu numberwidth nuw relativenumber rnu rulerformat
+		\ ruf runexec scrollbind scb scrolloff so sort sortorder shell sh shortmess
+		\ shm slowfs smartcase scs sortnumbers statusline stl syscalls tabstop
+		\ timefmt timeoutlen tm trash trashdir ts tuioptions to undolevels ul vicmd
+		\ viewcolumns vifminfo vimhelp vixcmd wildmenu wmnu wrap wrapscan ws
 
 " Disabled boolean options
 syntax keyword vifmOption contained noautochpos noconfirm nocf nochaselinks
